# evently_booking_platform

./: .dockerignore  .env.example  .gitignore  DOCKER_README.md  Dockerfile  Dockerfile.dev  README.md  docker-compose.prod.yml  docker-compose.yml  main.py  pyproject.toml  scripts.py
.github/workflows/: deploy.yml
evently_booking_platform/: __init__.py  cache.py  config.py  database.py  main.py
evently_booking_platform/api/: __init__.py  advanced_analytics.py  analytics.py  auth.py  bookings.py  events.py  seats.py  users.py  waitlist.py
evently_booking_platform/docs/: __init__.py  examples.py  responses.py
evently_booking_platform/middleware/: __init__.py  error_handler.py  logging.py  rate_limiter.py  validation.py
evently_booking_platform/models/: __init__.py  base.py  booking.py  booking_history.py  event.py  seat.py  seat_booking.py  user.py  waitlist.py
evently_booking_platform/schemas/: __init__.py  advanced_analytics.py  analytics.py  auth.py  booking.py  common.py  event.py  seat.py  waitlist.py
evently_booking_platform/services/: __init__.py  advanced_analytics_service.py  analytics_service.py  booking_service.py  bulk_booking_service.py  dynamic_pricing_service.py  enhanced_health_service.py  event_recommendation_service.py  event_service.py  notification_service.py  seat_recommendation_service.py  seat_service.py  user_service.py  waitlist_service.py
evently_booking_platform/tasks/: __init__.py  booking_tasks.py  celery_app.py  notification_tasks.py
evently_booking_platform/utils/: auth.py  circuit_breaker.py  dependencies.py  exceptions.py  health_check.py  logging_config.py  retry.py
migrations/: env.py
migrations/versions/: bfeba0253dbd_initial_migration_with_all_models.py
miscellaneous/: ADMIN_AUTHENTICATION_GUIDE.md  ADVANCED_FEATURES_DOCUMENTATION.md  API_DOCUMENTATION.md  DEPLOYMENT_GUIDE.md  DESIGN.md  IMPLEMENTATION_PLAN.md  create_admin_user.py  export_openapi.py  openapi.json  postman_collection.json
